--- a/css/_maps.scss
+++ b/css/_maps.scss
@@ -9,7 +9,7 @@
   .etablissements{
     overflow: hidden;
     position: absolute;
-    right: 15px;
+    right: 0;
     top: 0;
     width: 30%;
     height: 100%;
