--- a/css/_variables.scss
+++ b/css/_variables.scss
@@ -3,6 +3,7 @@ $gray-1: #dfdfdf;
 $gray-2: #b9b9b9;
 $gray-3: #868686;
 $gray-4: #666666;
-$gray-5: #333333;
+$gray-5: #4d4d4d;
+$gray-6: #333333;
 
 $roboto: 'Roboto', sans-serif;
