--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,54 @@ body {
 *, *:focus, *:active {
   outline: none !important; }
 
+.search_bar {
+  background-color: #4d4d4d;
+  padding: 15px 0; }
+  .search_bar form {
+    padding: 15px;
+    background-color: #333333; }
+    .search_bar form .form_input {
+      display: block;
+      padding: 8px 15px;
+      height: 60px;
+      width: 100%;
+      border: none;
+      font-size: 13px; }
+    .search_bar form .submit_button {
+      border-radius: 0;
+      font-size: 13px;
+      font-weight: 700;
+      letter-spacing: 0.5px;
+      color: #fff;
+      background-color: #b9b9b9;
+      height: 60px;
+      cursor: pointer; }
+
+.categories_carousel {
+  padding: 15px;
+  background-color: #fff;
+  margin: 15px 0; }
+  .categories_carousel .carousel {
+    margin: 0;
+    padding: 0; }
+  .categories_carousel .category {
+    text-align: center; }
+    .categories_carousel .category .fa {
+      font-size: 25px;
+      line-height: 60px;
+      background-color: #b9b9b9;
+      color: #666666;
+      display: inline-block;
+      height: 60px;
+      width: 60px;
+      border-radius: 100%;
+      margin-bottom: 8px; }
+    .categories_carousel .category .category_name {
+      display: block;
+      text-transform: uppercase;
+      font-weight: 700;
+      font-size: 12px; }
+
 #google-map {
   position: relative;
   height: 500px; }
@@ -14,7 +62,7 @@ body {
   #google-map .etablissements {
     overflow: hidden;
     position: absolute;
-    right: 15px;
+    right: 0;
     top: 0;
     width: 30%;
     height: 100%;
