--- a/css/_responsive.scss
+++ b/css/_responsive.scss
@@ -1,9 +1,95 @@
 @media (max-width: 967px) {
   header{
-    #nav-menu{
-      .navbar{
-        .navbar-collapse{
-          justify-content: flex-end;
+    #top-nav-menu{
+      .nav-contact{
+        clear: both;
+        margin-bottom: 10px;
+        li{
+          float: left;
+          margin-right: 15px;
+        }
+      }
+      .nav-social-media{
+        float: left;
+        li{
+          float: left;
+          margin-left: 15px;
+        }
+      }
+      $nav-social-icon-size: 22px;
+      .social-icon{
+        display: inline-block;
+        font-size: 12px;
+        width: $nav-social-icon-size;
+        height: $nav-social-icon-size;
+        line-height: $nav-social-icon-size;
+        text-align: center;
+        border-radius: 100%;
+        background-color: $gray-0;
+        color: $gray-4;
+      }
+      .button{
+        padding: 5px 10px;
+        color: $gray-4;
+        background-color: $gray-1;
+        border-radius: 3px;
+        font-weight: 700;
+        font-size: 11px;
+        text-transform: uppercase;
+      }
+    }
+    .navbar{
+       margin: 0;
+      .icon-bar{
+        background-color: $gray-1;
+      }
+
+       .navbar-nav{
+         float: none;
+       }
+
+       a{
+         color: $gray-2;
+         text-transform: uppercase;
+         font-weight: 700;
+       }
+     }
+  }
+
+  #google-map{
+    .etablissements{
+      overflow: hidden;
+      position: absolute;
+      right: 0;
+      top: auto;
+      bottom: 0;
+      width: 100%;
+      height: 100px;
+      z-index: 100;
+
+      .etablissement{
+        position: relative;
+        background-color: $gray-2;
+        overflow: hidden;
+        margin: 1px 0;
+        cursor: pointer;
+        .photo_etablissement{
+          float: left;
+          margin-right: 8px;
+        }
+        .details_etablissement{
+          font-size: 12px;
+          margin-left: 5px;
+          padding: 5px;
+
+          .nom_etablissement{
+            font-weight: 700;
+            font-size: 13px;
+            margin-bottom: 5px;
+          }
+          .quartier_etablissement{
+            font-style: italic;
+          }
         }
       }
     }
