--- a/css/style.css
+++ b/css/style.css
@@ -59,6 +59,12 @@ body {
   #google-map #map {
     height: 500px;
     background-color: #dfdfdf; }
+  #google-map .etablissements:hover {
+    opacity: 1; }
+    #google-map .etablissements:hover .controls .prev {
+      top: 0; }
+    #google-map .etablissements:hover .controls .next {
+      bottom: 0; }
   #google-map .etablissements {
     overflow: hidden;
     position: absolute;
@@ -66,7 +72,43 @@ body {
     top: 0;
     width: 35%;
     height: 100%;
-    z-index: 100; }
+    z-index: 100;
+    opacity: 0.4;
+    -webkit-transition: all 0.3s ease-in-out;
+    -moz-transition: all 0.3s ease-in-out;
+    -o-transition: all 0.3s ease-in-out;
+    transition: all 0.3s ease-in-out; }
+    #google-map .etablissements .controls span {
+      display: block;
+      width: 100%;
+      height: 40px;
+      position: absolute;
+      z-index: 101;
+      background-color: rgba(77, 77, 77, 0.3);
+      left: 0;
+      cursor: pointer;
+      font-family: "FontAwesome", sans-serif;
+      text-align: center;
+      color: #fff;
+      line-height: 40px; }
+    #google-map .etablissements .controls span:hover {
+      background-color: rgba(77, 77, 77, 0.9); }
+    #google-map .etablissements .controls .prev {
+      top: -45px;
+      -webkit-transition: all 0.3s ease-in-out;
+      -moz-transition: all 0.3s ease-in-out;
+      -o-transition: all 0.3s ease-in-out;
+      transition: all 0.3s ease-in-out; }
+    #google-map .etablissements .controls .next {
+      bottom: -45px;
+      -webkit-transition: all 0.3s ease-in-out;
+      -moz-transition: all 0.3s ease-in-out;
+      -o-transition: all 0.3s ease-in-out;
+      transition: all 0.3s ease-in-out; }
+    #google-map .etablissements .controls .prev:after {
+      content: '\f077'; }
+    #google-map .etablissements .controls .next:after {
+      content: '\f078'; }
     #google-map .etablissements .etablissement {
       position: relative;
       background-color: #b9b9b9;
