--- a/css/_maps.scss
+++ b/css/_maps.scss
@@ -7,10 +7,6 @@
   }
   .etablissements:hover{
     opacity: 1;
-    .controls{
-      .prev{  top: 0;  }
-      .next{  bottom: 0;  }
-    }
   }
 
   .etablissements{
@@ -25,13 +21,14 @@
     @include transition(0.3s);
 
     .controls{
+      display: none;
       span{
         display: block;
         width: 100%;
         height: 40px;
         position: absolute;
         z-index: 101;
-        background-color: rgba($gray-5,0.3);
+        background-color: rgba($gray-5,0.2);
         left: 0;
         cursor: pointer;
         font-family: "FontAwesome", sans-serif;
@@ -40,14 +37,14 @@
         line-height: 40px;
       }
       span:hover{
-        background-color: rgba($gray-5,0.9);
+        background-color: rgba($gray-5,0.8);
       }
       .prev{
-        top: -45px;
+        top: 0;
         @include transition(0.3s);
       }
       .next{
-        bottom: -45px;
+        bottom: 0;
         @include transition(0.3s);
       }
 
@@ -56,6 +53,39 @@
       }
       .next:after{
         content: '\f078';
+      }
+    }
+
+    @media (min-width: 769px) and (max-width: 1365px) {
+      .controls{
+        span{
+          display: block;
+          width: 40px;
+          left: auto;
+          height: 102px;
+          bottom: 0;
+          line-height: 102px;
+        }
+        .prev{
+          top: auto;
+          left: 0;
+        }
+        .next{
+          bottom: 0;
+          right: 0;
+        }
+        .prev:after{
+          content: '\f053';
+        }
+        .next:after{
+          content: '\f054';
+        }
+      }
+    }
+
+    @media (min-width: 769px) {
+      .controls{
+        display: block;
       }
     }
 
