--- a/css/_responsive.scss
+++ b/css/_responsive.scss
@@ -1,3 +1,45 @@
+@media (max-width: 1365px) {
+  #google-map{
+    .etablissements{
+      overflow: hidden;
+      position: absolute;
+      right: 0;
+      top: auto;
+      bottom: 0;
+      width: 100%;
+      height: 100px;
+      opacity: 1;
+      z-index: 100;
+
+      .etablissement{
+        position: relative;
+        background-color: $gray-2;
+        overflow: hidden;
+        margin: 1px 0;
+        cursor: pointer;
+        .photo_etablissement{
+          float: left;
+          margin-right: 8px;
+        }
+        .details_etablissement{
+          font-size: 12px;
+          margin-left: 5px;
+          padding: 5px;
+
+          .nom_etablissement{
+            font-weight: 700;
+            font-size: 13px;
+            margin-bottom: 5px;
+          }
+          .quartier_etablissement{
+            font-style: italic;
+          }
+        }
+      }
+    }
+  }
+}
+
 @media (max-width: 967px) {
   header{
     #top-nav-menu{
@@ -56,7 +98,7 @@
      }
   }
 
-  #google-map{
+  /*#google-map{
     .etablissements{
       overflow: hidden;
       position: absolute;
@@ -65,6 +107,7 @@
       bottom: 0;
       width: 100%;
       height: 100px;
+      opacity: 1;
       z-index: 100;
 
       .etablissement{
@@ -93,5 +136,5 @@
         }
       }
     }
-  }
+  }*/
 }
