--- a/css/style.css
+++ b/css/style.css
@@ -61,10 +61,6 @@ body {
     background-color: #dfdfdf; }
   #google-map .etablissements:hover {
     opacity: 1; }
-    #google-map .etablissements:hover .controls .prev {
-      top: 0; }
-    #google-map .etablissements:hover .controls .next {
-      bottom: 0; }
   #google-map .etablissements {
     overflow: hidden;
     position: absolute;
@@ -78,37 +74,60 @@ body {
     -moz-transition: all 0.3s ease-in-out;
     -o-transition: all 0.3s ease-in-out;
     transition: all 0.3s ease-in-out; }
-    #google-map .etablissements .controls span {
-      display: block;
-      width: 100%;
-      height: 40px;
-      position: absolute;
-      z-index: 101;
-      background-color: rgba(77, 77, 77, 0.3);
-      left: 0;
-      cursor: pointer;
-      font-family: "FontAwesome", sans-serif;
-      text-align: center;
-      color: #fff;
-      line-height: 40px; }
-    #google-map .etablissements .controls span:hover {
-      background-color: rgba(77, 77, 77, 0.9); }
-    #google-map .etablissements .controls .prev {
-      top: -45px;
-      -webkit-transition: all 0.3s ease-in-out;
-      -moz-transition: all 0.3s ease-in-out;
-      -o-transition: all 0.3s ease-in-out;
-      transition: all 0.3s ease-in-out; }
-    #google-map .etablissements .controls .next {
-      bottom: -45px;
-      -webkit-transition: all 0.3s ease-in-out;
-      -moz-transition: all 0.3s ease-in-out;
-      -o-transition: all 0.3s ease-in-out;
-      transition: all 0.3s ease-in-out; }
-    #google-map .etablissements .controls .prev:after {
-      content: '\f077'; }
-    #google-map .etablissements .controls .next:after {
-      content: '\f078'; }
+    #google-map .etablissements .controls {
+      display: none; }
+      #google-map .etablissements .controls span {
+        display: block;
+        width: 100%;
+        height: 40px;
+        position: absolute;
+        z-index: 101;
+        background-color: rgba(77, 77, 77, 0.2);
+        left: 0;
+        cursor: pointer;
+        font-family: "FontAwesome", sans-serif;
+        text-align: center;
+        color: #fff;
+        line-height: 40px; }
+      #google-map .etablissements .controls span:hover {
+        background-color: rgba(77, 77, 77, 0.8); }
+      #google-map .etablissements .controls .prev {
+        top: 0;
+        -webkit-transition: all 0.3s ease-in-out;
+        -moz-transition: all 0.3s ease-in-out;
+        -o-transition: all 0.3s ease-in-out;
+        transition: all 0.3s ease-in-out; }
+      #google-map .etablissements .controls .next {
+        bottom: 0;
+        -webkit-transition: all 0.3s ease-in-out;
+        -moz-transition: all 0.3s ease-in-out;
+        -o-transition: all 0.3s ease-in-out;
+        transition: all 0.3s ease-in-out; }
+      #google-map .etablissements .controls .prev:after {
+        content: '\f077'; }
+      #google-map .etablissements .controls .next:after {
+        content: '\f078'; }
+    @media (min-width: 769px) and (max-width: 1365px) {
+      #google-map .etablissements .controls span {
+        display: block;
+        width: 40px;
+        left: auto;
+        height: 102px;
+        bottom: 0;
+        line-height: 102px; }
+      #google-map .etablissements .controls .prev {
+        top: auto;
+        left: 0; }
+      #google-map .etablissements .controls .next {
+        bottom: 0;
+        right: 0; }
+      #google-map .etablissements .controls .prev:after {
+        content: '\f053'; }
+      #google-map .etablissements .controls .next:after {
+        content: '\f054'; } }
+    @media (min-width: 769px) {
+      #google-map .etablissements .controls {
+        display: block; } }
     #google-map .etablissements .etablissement {
       position: relative;
       background-color: #b9b9b9;
@@ -187,6 +206,36 @@ header .navbar {
     text-transform: uppercase;
     font-weight: 700; }
 
+@media (max-width: 1365px) {
+  #google-map .etablissements {
+    overflow: hidden;
+    position: absolute;
+    right: 0;
+    top: auto;
+    bottom: 0;
+    width: 100%;
+    height: 100px;
+    opacity: 1;
+    z-index: 100; }
+    #google-map .etablissements .etablissement {
+      position: relative;
+      background-color: #b9b9b9;
+      overflow: hidden;
+      margin: 1px 0;
+      cursor: pointer; }
+      #google-map .etablissements .etablissement .photo_etablissement {
+        float: left;
+        margin-right: 8px; }
+      #google-map .etablissements .etablissement .details_etablissement {
+        font-size: 12px;
+        margin-left: 5px;
+        padding: 5px; }
+        #google-map .etablissements .etablissement .details_etablissement .nom_etablissement {
+          font-weight: 700;
+          font-size: 13px;
+          margin-bottom: 5px; }
+        #google-map .etablissements .etablissement .details_etablissement .quartier_etablissement {
+          font-style: italic; } }
 @media (max-width: 967px) {
   header #top-nav-menu .nav-contact {
     clear: both;
@@ -228,33 +277,44 @@ header .navbar {
       text-transform: uppercase;
       font-weight: 700; }
 
-  #google-map .etablissements {
-    overflow: hidden;
-    position: absolute;
-    right: 0;
-    top: auto;
-    bottom: 0;
-    width: 100%;
-    height: 100px;
-    z-index: 100; }
-    #google-map .etablissements .etablissement {
-      position: relative;
-      background-color: #b9b9b9;
+  /*#google-map{
+    .etablissements{
       overflow: hidden;
-      margin: 1px 0;
-      cursor: pointer; }
-      #google-map .etablissements .etablissement .photo_etablissement {
-        float: left;
-        margin-right: 8px; }
-      #google-map .etablissements .etablissement .details_etablissement {
-        font-size: 12px;
-        margin-left: 5px;
-        padding: 5px; }
-        #google-map .etablissements .etablissement .details_etablissement .nom_etablissement {
-          font-weight: 700;
-          font-size: 13px;
-          margin-bottom: 5px; }
-        #google-map .etablissements .etablissement .details_etablissement .quartier_etablissement {
-          font-style: italic; } }
+      position: absolute;
+      right: 0;
+      top: auto;
+      bottom: 0;
+      width: 100%;
+      height: 100px;
+      opacity: 1;
+      z-index: 100;
+
+      .etablissement{
+        position: relative;
+        background-color: $gray-2;
+        overflow: hidden;
+        margin: 1px 0;
+        cursor: pointer;
+        .photo_etablissement{
+          float: left;
+          margin-right: 8px;
+        }
+        .details_etablissement{
+          font-size: 12px;
+          margin-left: 5px;
+          padding: 5px;
+
+          .nom_etablissement{
+            font-weight: 700;
+            font-size: 13px;
+            margin-bottom: 5px;
+          }
+          .quartier_etablissement{
+            font-style: italic;
+          }
+        }
+      }
+    }
+  }*/ }
 
 /*# sourceMappingURL=style.css.map */
