Ajout deu body et de la sidebar

--- a/css/style.scss
+++ b/css/style.scss
@@ -1,6 +1,7 @@
 @import "variables";
-@import "general";
 @import "mixins";
+@import "general";
 @import "maps";
 @import "header";
+@import "sidebar";
 @import "responsive";
