--- a/css/_general.scss
+++ b/css/_general.scss
@@ -1,3 +1,6 @@
+a:hover{
+  text-decoration: none;
+}
 body{
   font-family: $roboto;
   background-color: $gray-0;
@@ -68,6 +71,85 @@ body{
       text-transform: uppercase;
       font-weight: 700;
       font-size: 12px;
+    }
+  }
+}
+
+.body{
+  .main-body{
+    padding: 15px;
+    background-color: #fff;
+
+    .section{
+      .section-header{
+        position: relative;
+        overflow: hidden;
+
+        .slider-controls{
+          float: right;
+          margin-top: 10px;
+          span{
+            display: inline-block;
+            height: 35px;
+            width: 35px;
+            font-size: 12px;
+            line-height: 35px;
+            background-color: $gray-2;
+            cursor: pointer;
+            font-family: "FontAwesome", sans-serif;
+            text-align: center;
+            color: $gray-4;
+            @include transition(0.3s);
+          }
+          span:hover{
+            background-color: $gray-3;
+            color: #fff;
+          }
+          .prev:after{
+            content: '\f053';
+          }
+          .next:after{
+            content: '\f054';
+          }
+        }
+      }
+    }
+    .section.section-slider{
+      .section-title{
+        float: left;
+      }
+      .section-body{
+        .articles{
+          display: flex;
+          flex-direction: row;
+          flex-wrap: wrap;
+
+          a{
+            position: relative;
+            width: 50%;
+            padding: 0 1%;
+            margin-bottom: 15px;
+
+            .article_picture_frame{
+              position: relative;
+              width: 100%;
+              height: 200px;
+              overflow: hidden;
+            }
+            .article_title{
+              color: $gray-6;
+              font-weight: 700;
+              margin: 5px 0 8px;
+            }
+            .article_abstract{
+              font-size: 12px;
+              color: $gray-4;
+              height: 100px;
+              overflow: hidden;
+            }
+          }
+        }
+      }
     }
   }
 }
