--- a/css/_responsive.scss
+++ b/css/_responsive.scss
@@ -97,44 +97,50 @@
        }
      }
   }
-
-  /*#google-map{
-    .etablissements{
-      overflow: hidden;
-      position: absolute;
-      right: 0;
-      top: auto;
-      bottom: 0;
-      width: 100%;
-      height: 100px;
-      opacity: 1;
-      z-index: 100;
-
-      .etablissement{
-        position: relative;
-        background-color: $gray-2;
-        overflow: hidden;
-        margin: 1px 0;
-        cursor: pointer;
-        .photo_etablissement{
-          float: left;
-          margin-right: 8px;
-        }
-        .details_etablissement{
-          font-size: 12px;
-          margin-left: 5px;
-          padding: 5px;
-
-          .nom_etablissement{
-            font-weight: 700;
-            font-size: 13px;
-            margin-bottom: 5px;
+  .body{
+    .main-body{
+      .section{
+        .section-header{
+          .slider-controls{
+            float: none;
+            margin: 10px 0;
           }
-          .quartier_etablissement{
-            font-style: italic;
+        }
+      }
+      .section.section-slider{
+        .section-title{
+          float: none;
+        }
+        .section-body{
+          .articles{
+
+            a{
+              position: relative;
+              width: 50%;
+              padding: 0 1%;
+              margin-bottom: 15px;
+
+              .article_picture_frame{
+                position: relative;
+                width: 100%;
+                height: 200px;
+                overflow: hidden;
+              }
+              .article_title{
+                color: $gray-6;
+                font-weight: 700;
+                margin: 5px 0 8px;
+              }
+              .article_abstract{
+                font-size: 12px;
+                color: $gray-4;
+                height: 100px;
+                overflow: hidden;
+              }
+            }
           }
         }
       }
     }
-  }*/
+  }
 }
