--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,6 @@
+a:hover {
+  text-decoration: none; }
+
 body {
   font-family: "Roboto", sans-serif;
   background-color: #f8f8f8; }
@@ -52,6 +55,63 @@ body {
       text-transform: uppercase;
       font-weight: 700;
       font-size: 12px; }
+
+.body .main-body {
+  padding: 15px;
+  background-color: #fff; }
+  .body .main-body .section .section-header {
+    position: relative;
+    overflow: hidden; }
+    .body .main-body .section .section-header .slider-controls {
+      float: right;
+      margin-top: 10px; }
+      .body .main-body .section .section-header .slider-controls span {
+        display: inline-block;
+        height: 35px;
+        width: 35px;
+        font-size: 12px;
+        line-height: 35px;
+        background-color: #b9b9b9;
+        cursor: pointer;
+        font-family: "FontAwesome", sans-serif;
+        text-align: center;
+        color: #666666;
+        -webkit-transition: all 0.3s ease-in-out;
+        -moz-transition: all 0.3s ease-in-out;
+        -o-transition: all 0.3s ease-in-out;
+        transition: all 0.3s ease-in-out; }
+      .body .main-body .section .section-header .slider-controls span:hover {
+        background-color: #868686;
+        color: #fff; }
+      .body .main-body .section .section-header .slider-controls .prev:after {
+        content: '\f053'; }
+      .body .main-body .section .section-header .slider-controls .next:after {
+        content: '\f054'; }
+  .body .main-body .section.section-slider .section-title {
+    float: left; }
+  .body .main-body .section.section-slider .section-body .articles {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap; }
+    .body .main-body .section.section-slider .section-body .articles a {
+      position: relative;
+      width: 50%;
+      padding: 0 1%;
+      margin-bottom: 15px; }
+      .body .main-body .section.section-slider .section-body .articles a .article_picture_frame {
+        position: relative;
+        width: 100%;
+        height: 200px;
+        overflow: hidden; }
+      .body .main-body .section.section-slider .section-body .articles a .article_title {
+        color: #333333;
+        font-weight: 700;
+        margin: 5px 0 8px; }
+      .body .main-body .section.section-slider .section-body .articles a .article_abstract {
+        font-size: 12px;
+        color: #666666;
+        height: 100px;
+        overflow: hidden; }
 
 #google-map {
   position: relative;
@@ -206,6 +266,29 @@ header .navbar {
     text-transform: uppercase;
     font-weight: 700; }
 
+.sidebar .widget {
+  margin-bottom: 20px;
+  padding: 15px;
+  background-color: #fff;
+  box-shadow: 0 4px 0 #f0f0f0; }
+  .sidebar .widget .widget-title {
+    text-transform: uppercase;
+    font-size: 14px;
+    border-bottom: solid 2px #868686;
+    padding-bottom: 8px; }
+.sidebar .publicite {
+  margin: 30px 0;
+  text-align: center; }
+  .sidebar .publicite .placeholder {
+    height: 300px;
+    width: 80%;
+    margin: 0 auto;
+    text-transform: uppercase;
+    font-weight: 700;
+    color: #fff;
+    line-height: 300px;
+    background-color: #666666; }
+
 @media (max-width: 1365px) {
   #google-map .etablissements {
     overflow: hidden;
@@ -277,44 +360,29 @@ header .navbar {
       text-transform: uppercase;
       font-weight: 700; }
 
-  /*#google-map{
-    .etablissements{
-      overflow: hidden;
-      position: absolute;
-      right: 0;
-      top: auto;
-      bottom: 0;
+  .body .main-body .section .section-header .slider-controls {
+    float: none;
+    margin: 10px 0; }
+  .body .main-body .section.section-slider .section-title {
+    float: none; }
+  .body .main-body .section.section-slider .section-body .articles a {
+    position: relative;
+    width: 50%;
+    padding: 0 1%;
+    margin-bottom: 15px; }
+    .body .main-body .section.section-slider .section-body .articles a .article_picture_frame {
+      position: relative;
       width: 100%;
+      height: 200px;
+      overflow: hidden; }
+    .body .main-body .section.section-slider .section-body .articles a .article_title {
+      color: #333333;
+      font-weight: 700;
+      margin: 5px 0 8px; }
+    .body .main-body .section.section-slider .section-body .articles a .article_abstract {
+      font-size: 12px;
+      color: #666666;
       height: 100px;
-      opacity: 1;
-      z-index: 100;
-
-      .etablissement{
-        position: relative;
-        background-color: $gray-2;
-        overflow: hidden;
-        margin: 1px 0;
-        cursor: pointer;
-        .photo_etablissement{
-          float: left;
-          margin-right: 8px;
-        }
-        .details_etablissement{
-          font-size: 12px;
-          margin-left: 5px;
-          padding: 5px;
-
-          .nom_etablissement{
-            font-weight: 700;
-            font-size: 13px;
-            margin-bottom: 5px;
-          }
-          .quartier_etablissement{
-            font-style: italic;
-          }
-        }
-      }
-    }
-  }*/ }
+      overflow: hidden; } }
 
 /*# sourceMappingURL=style.css.map */
