--- a/css/_general.scss
+++ b/css/_general.scss
@@ -135,6 +135,9 @@ body{
               width: 100%;
               height: 200px;
               overflow: hidden;
+              display: flex;
+              justify-content: center;
+              align-items: center;
             }
             .article_title{
               color: $gray-6;
