--- a/css/style.css
+++ b/css/style.css
@@ -102,7 +102,10 @@ body {
         position: relative;
         width: 100%;
         height: 200px;
-        overflow: hidden; }
+        overflow: hidden;
+        display: flex;
+        justify-content: center;
+        align-items: center; }
       .body .main-body .section.section-slider .section-body .articles a .article_title {
         color: #333333;
         font-weight: 700;
@@ -319,7 +322,7 @@ header .navbar {
           margin-bottom: 5px; }
         #google-map .etablissements .etablissement .details_etablissement .quartier_etablissement {
           font-style: italic; } }
-@media (max-width: 967px) {
+@media (max-width: 767px) {
   header #top-nav-menu .nav-contact {
     clear: both;
     margin-bottom: 10px; }
@@ -375,6 +378,18 @@ header .navbar {
       width: 100%;
       height: 200px;
       overflow: hidden; }
+    .body .main-body .section.section-slider .section-body .articles a .article_title {
+      color: #333333;
+      font-weight: 700;
+      margin: 5px 0 8px; }
+    .body .main-body .section.section-slider .section-body .articles a .article_abstract {
+      font-size: 12px;
+      color: #666666;
+      height: 100px;
+      overflow: hidden; } }
+@media (max-width: 640px) {
+  .body .main-body .section.section-slider .section-body .articles {
+    display: block; }
     .body .main-body .section.section-slider .section-body .articles a .article_title {
       color: #333333;
       font-weight: 700;
