Changement de couleur pour les boutons .prev abd .next du carousel des catégories

--- a/css/_general.scss
+++ b/css/_general.scss
@@ -50,6 +50,9 @@ body{
     margin: 0;
     padding: 0;
   }
+  .slick-prev:before,.slick-next:before{
+    color: $gray-4;
+  }
 
   .category{
     text-align: center;
