--- a/css/_sidebar.scss
+++ b/css/_sidebar.scss
@@ -11,6 +11,48 @@
       border-bottom: solid 2px $gray-3;
       padding-bottom: 8px;
     }
+    //end of widget title
+
+    .widget-link-list{
+      list-style: none;
+      padding: 0;
+
+      .list-item{
+        position: relative;
+        overflow: hidden;
+        margin: 5px 0;
+        .photo_etablissement{
+          width: 30%;
+          height: 80px;
+          overflow: hidden;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          float: left;
+        }
+        .details_etablissement{
+          float: right;
+          height: 80px;
+          width: 70%;
+          padding: 5px;
+          font-size: 12px;
+          color: $gray-3;
+
+          .nom_etablissement{
+            font-weight: 700;
+            color: $gray-5;
+            line-height: 13px;
+            font-size: 13px;
+          }
+        }
+      }
+    }
+
+    select{
+      display: block;
+      width: 100%;
+      padding: 5px;
+    }
   }
   .publicite{
     margin: 30px 0;
@@ -25,5 +67,9 @@
       line-height: 300px;
       background-color: $gray-4;
     }
+  }
+
+  .calendar{
+    font-size: 12px;
   }
 }
