Le responsive du bouton de recher à proximité est fait

--- a/css/_responsive.scss
+++ b/css/_responsive.scss
@@ -97,6 +97,13 @@
        }
      }
   }
+  .search_bar{
+    form{
+      .form_input{
+        flex-direction: column;
+      }
+    }
+  }
   .body{
     .main-body{
       .popular-tags{
